--- a/Guide/8. RegExp.md
+++ b/Guide/8. RegExp.md
@@ -133,18 +133,174 @@ Some more metacharacters are *, +, ?, { and }. - specify number of repetitions
 
 - Groups
 
-
 ```python
         import re
     # parantheses specify groups
     pattern = r"egg(spam)*"
 
     if re.match(pattern, "egg"):
-    print("Match 1")
+        print("Match 1")
 
     if re.match(pattern, "eggspamspamspamegg"):
-    print("Match 2")
+        print("Match 2")
 
     if re.match(pattern, "spam"):
-    print("Match 3")
+        print("Match 3")
+```
+
+- The content of groups in a match can be accessed using the group function.
+- A call of group(0) or group() returns the whole match. 
+- A call of group(n), where n is greater than 0, returns the nth group from the left. 
+- The method groups() returns all groups up from 1.
+
+```python
+    import re
+
+    pattern = r"a(bc)(de)(f(g)h)i"
+
+    match = re.match(pattern, "abcdefghijklmnop")
+    if match:
+    print(match.group()) #abcdefghi
+    print(match.group(0)) #abcdefghi
+    print(match.group(1)) bc
+    print(match.group(2)) de
+    print(match.groups()) ('bc', 'de', 'fgh', 'g')
+
+```
+
+- There are several kinds of special groups:
+
+  - Two useful ones are named groups and non-capturing groups.
+  - Named groups have the format (?P<name>...), where name is the name of the group, and ... is the content. They behave exactly the same as normal groups, except they can be accessed by group(name) in addition to its number.
+  - Non-capturing groups have the format (?:...). They are not accessible by the group method, so they can be added to an existing regular expression without breaking the numbering.
+
+```python
+    import re
+
+    pattern = r"(?P<first>abc)(?:def)(ghi)"
+
+    match = re.match(pattern, "abcdefghi")
+    if match:
+        print(match.group("first")) #abc
+        print(match.groups()) # ('abc', 'ghi')
+
+```
+
+Another important metacharacter is |.This means "or", so red|blue matches either "red" or "blue".
+
+```python
+    import re
+
+    pattern = r"gr(a|e)y"
+
+    match = re.match(pattern, "gray")
+    if match:
+        print ("Match 1")
+
+    match = re.match(pattern, "grey")
+    if match:
+        print ("Match 2")    
+
+    match = re.match(pattern, "griy")
+    if match:
+        print ("Match 3")
+
+```
+
+----------
+# Special Sequences 
+- written as a backslash followed by another character. 
+- One useful special sequence is a backslash and a number between 1 and 99, e.g., \1 or \17. This matches the expression of the group of that number.
+- How many time a group repeats itself
+
+```python
+    import re
+
+    pattern = r"(.+) \1"
+
+    match = re.match(pattern, "word word")
+    if match:
+        print ("Match 1")
+
+    match = re.match(pattern, "?! ?!")
+    if match:
+        print ("Match 2")    
+
+    match = re.match(pattern, "abc cde")
+    if match:
+        print ("Match 3")
+
+```
+
+More useful special sequences are \d, \s, and \w.
+These match digits, whitespace, and word characters respectively. 
+- In ASCII mode they are equivalent to [0-9], [ \t\n\r\f\v], and [a-zA-Z0-9_].
+- Versions of these special sequences with upper case letters - \D, \S, and \W - mean the opposite to the lower-case versions.
+-  \D matches anything that isn't a digit.
+
+```python
+    import re
+
+    pattern = r"(\D+\d)"
+
+    match = re.match(pattern, "Hi 999!")
+
+    if match:
+        print("Match 1")
+
+    match = re.match(pattern, "1, 23, 456!")
+    if match:
+        print("Match 2")
+
+    match = re.match(pattern, " ! $?")
+    if match:
+        print("Match 3")
+
+```
+
+- Additional special sequences are \A, \Z, and \b.
+- The sequences \A and \Z match the beginning and end of a string, respectively. 
+- The sequence \b matches the empty string between \w and \W characters, or \w characters and the beginning or end of the string. Informally, it represents the boundary between words.
+- The sequence \B matches the empty string anywhere else.
+
+```python
+    import re
+
+    pattern = r"\b(cat)\b"
+
+    match = re.search(pattern, "The cat sat!")
+    if match:
+        print ("Match 1")
+
+    match = re.search(pattern, "We s>cat<tered?")
+    if match:
+        print ("Match 2")
+
+    match = re.search(pattern, "We scattered.")
+    if match:
+        print ("Match 3")
+
+```
+----------
+EMAIL Extraction
+
+```python
+str = "Please contact info@sololearn.com for assistance"
+
+pattern = r"([\w\.-]+)@([\w\.-]+)(\.[\w\.]+)"
+
+#[\w\.-]+ matches one or more word character, dot or dash.
+```
+- The regex above says that the string should contain a word (with dots and dashes allowed), followed by the @ sign, then another similar word, then a dot and another word.
+
+```python
+    import re
+
+    pattern = r"([\w\.-]+)@([\w\.-]+)(\.[\w\.]+)"
+    str = "Please contact info@sololearn.com for assistance"
+
+    match = re.search(pattern, str)
+    if match:
+        print(match.group())
+
 ```
